[package]
name = "llh"
version = "0.1.2"
authors = ["Elen Eisendle <ln@calcifer.ee>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json", "blocking"] }
tokio = { version = "1.2.0", features = ["full", "macros"] }
select = "0.5.0"
chrono = "0.4.19"
serde_json = "1.0.62"
serde = {version = "1.0.123", features = ["derive"]}
indicatif = {version = "0.15.0", git = "https://github.com/mitsuhiko/indicatif.git", branch = "main"}
futures = "0.3.13"

[profile.release]
debug = true
