[package]
name = "llh"
version = "0.1.6"
authors = ["ln <ln@calcifer.ee>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
tokio = { version = "1.9.0", features = ["full", "macros"] }
select = "0.5.0"
chrono = "0.4.19"
serde_json = "1.0.66"
serde = {version = "1.0.127", features = ["derive"]}
indicatif = "0.16.2"
futures = "0.3.16"
clap = "2.33.3"
lazy_static = "1.4.0"

[profile.release]
debug = true
